--- a/styles/app.css
+++ b/styles/app.css
@@ -13,6 +13,52 @@
 /*   Global
 /* ------------------------------------- */
 
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+main {
+  height: 100%;
+}
+
+body {
+  font-family: Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 /* ------------------------------------- */
 /*   Section Name
 /* ------------------------------------- */
+
+main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.display {
+  flex-grow: 1;
+}
+
+.input {
+  padding: 20px;
+  order: 1;
+  text-align: center;
+}
+
+@media screen and ( min-width: 700px ) {
+
+  .input {
+    order: 0;
+  }
+
+  .display {
+    align-self: stretch;
+    display: flex;
+    justify-content: space-around;
+  }
+
+}
